--- a/style.css
+++ b/style.css
@@ -3,3 +3,27 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.header, .intro, .footer {
+    background-color: #1F2937;
+}
+
+h1 {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+a {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+button {
+    background-color: #3882f6;
+}
+
+.main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
