--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .header, .intro, .footer {
+    color: #f9faf8;
     background-color: #1F2937;
 }
 
 h1 {
     font-size: 24px;
-    color: #f9faf8;
 }
 
 a {
@@ -26,4 +27,26 @@ button {
     font-size: 48px;
     font-weight: bolder;
     color: #f9faf8;
+}
+
+.sign-up {
+    color: #f9faf8;
+    background-color: #3882f6;
+}
+
+.info-head {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.quote {
+    background-color: #e5e7eb;
+}
+
+.inspire {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
 }
