--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .header, .intro, .footer {
     color: #f9faf8;
     background-color: #1F2937;
+    display: flex;
 }
 
 h1 {
@@ -29,9 +30,10 @@ button {
     color: #f9faf8;
 }
 
-.sign-up {
-    color: #f9faf8;
-    background-color: #3882f6;
+.random-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .info-head {
@@ -40,8 +42,15 @@ button {
     color: #1F2937;
 }
 
+.ran-imgs {
+    display: flex;
+}
+
 .quote {
     background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .inspire {
@@ -49,4 +58,10 @@ button {
     font-weight: lighter;
     font-style: italic;
     color: #1F2937;
+}
+
+.sign-up {
+    color: #f9faf8;
+    background-color: #3882f6;
+    display: flex;
 }
