--- a/style.css
+++ b/style.css
@@ -2,13 +2,27 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: roboto, Tahoma, sans-serif;
 }
 
 .header, .intro, .footer {
     color: #f9faf8;
     background-color: #1F2937;
     display: flex;
+}
+
+.header {
+    align-self: stretch;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+a:link {text-decoration: none;}
+
+.links {
+    display: flex;
+    gap: 20px;
 }
 
 h1 {
