--- a/style.css
+++ b/style.css
@@ -85,10 +85,30 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    padding: 50px;
 }
 
 .ran-imgs {
     display: flex;
+    justify-content: center;
+    gap: 45px;
+}
+
+.ran-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    flex: 0 1 0;
+    color: hsla(0, 0%, 0%, 0.7);
+    gap: 8px;
+}
+
+.img {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882f6;
+    border-radius: 15px;
 }
 
 .quote {
