--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ button {
     color: #f9faf8;
     background-color: #3882f6;
     display: flex;
-    padding: 25px 120px;
+    padding: 45px 120px;
     align-items: center;
     justify-content: center;
     gap: 60px;
@@ -147,9 +147,23 @@ button {
 }
 
 .call-to {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-size: large;
+}
+
+h3, .product {
+    margin: 0px;
 }
 
 .lower {
     border: 3px solid white;
+}
+
+.footer {
+    align-self: stretch;
+    align-items: center;
+    justify-content: center;
+    padding: 35px;
 }
